--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "2d sorting algorithm",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
+    "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 3001",
     "build": "webpack --mode production"
   },
   "author": "AntonD",
