--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.2.1"
